# Lossless-compression

./: CMakeLists.txt  readme.md
docs/: data_transfer.md  design.md  design_debug.md  performance_bayer_converter.md  performance_decompress.md  performance_threadpool_color.md  performance_threadpool_mono.md  program_update.md  readme.md  usage.md
include/: ThreadPool.h  compressed_buffer_bpp8.hpp  compressed_buffer_bpp8d.hpp
modules/: CMakeLists.txt
modules/include/: bitstream.hpp  compressed_bitstream.hpp  compressed_block_bayerbpp8.hpp  compressed_block_bpp8.hpp  compressed_line_bpp8.hpp  itwos_complement_bitwidth.hpp  log.hpp  twos_complement_bitwidth0.hpp  twos_complement_bitwidth1.hpp  twos_complement_bitwidth2.hpp  twos_complement_bitwidth3.hpp  twos_complement_bitwidth4.hpp  twos_complement_bitwidth5.hpp  twos_complement_bitwidth6.hpp  twos_complement_bitwidth7.hpp  twos_complement_bitwidth8.hpp
modules/src/: bitstream.cpp  compressed_bitstream.cpp  compressed_block_bayerbpp8.cpp  compressed_block_bpp8.cpp  compressed_buffer_bpp8.cpp  compressed_line_bpp8.cpp  log.cpp  threadpool_mgr.cpp  twos_complement_bitwidth0.cpp  twos_complement_bitwidth1.cpp  twos_complement_bitwidth2.cpp  twos_complement_bitwidth3.cpp  twos_complement_bitwidth4.cpp  twos_complement_bitwidth5.cpp  twos_complement_bitwidth6.cpp  twos_complement_bitwidth7.cpp  twos_complement_bitwidth8.cpp
src/: CMakeLists.txt  compressed_block_bayerbpp8.cpp  compressed_block_bayerbpp8.hpp  compressed_buffer_bpp8.cpp  compressed_buffer_bpp8d.cpp  compressed_line_bpp8.cpp  compressed_line_bpp8.hpp  compressed_line_bpp8d.cpp  compressed_line_bpp8d.hpp
test/: CMakeLists.txt  bitstream_test.cpp  compressed_bitstream_test.cpp  compressed_block_test.cpp  compressed_line_test.cpp  coreversion_test.cpp  line_header_v1_test.cpp  testmain.cpp  two_complement_test.cpp
test_app/: CMakeLists.txt  test_app.cpp
